--- a/index.html
+++ b/index.html
@@ -758,7 +758,7 @@
     <script type="text/javascript" src="scripts/bootstrap.min.js"></script>
     <script type="text/javascript" src="scripts/moment.js"></script>
     <script type="text/javascript" src="scripts/bootstrap-datetimepicker.js"></script>
-    <script type="text/javascript" src="scripts/locales/bootstrap-datetimepicker.ru.js"></script>
+    <script type="text/javascript" src="scripts/ru.js"></script>
     <script>
         $(function(){
             var $window = $(window), $body   = $(document.body);
