on example 5 moved data-date-format to input tag

--- a/index.html
+++ b/index.html
@@ -325,8 +325,8 @@
                     <div class="row">
                         <div class='col-sm-6'>
                             <div class="form-group">
-                                <div class='input-group date' id='datetimepicker5' data-date-format="YYYY/MM/DD">
-                                    <input type='text' class="form-control" />
+                                <div class='input-group date' id='datetimepicker5'>
+                                    <input type='text' class="form-control" data-date-format="YYYY/MM/DD"/>
                                     <span class="input-group-addon">
                                         <span class="glyphicon glyphicon-calendar"></span>
                                     </span>
