--- a/index.html
+++ b/index.html
@@ -344,26 +344,27 @@
                 </div>
 
                 <div class="highlight highlight-html">
-                    <pre>
+<pre>
 <span class="nt">&lt;div</span> <span class="na">class=</span><span class="s">"container"</span><span class="nt">&gt;</span>
-    <span class="nt">&lt;div</span> <span class="na">class=</span><span class="s">"row"</span><span class="nt">&gt;</span>
-        <span class="nt">&lt;div</span> <span class="na">class=</span><span class="s">'col-sm-6'</span><span class="nt">&gt;</span>
-            <span class="nt">&lt;div</span> <span class="na">class=</span><span class="s">"form-group"</span><span class="nt">&gt;</span>
-                <span class="nt">&lt;div</span> <span class="na">class=</span><span class="s">'input-group date'</span> <span class="na">id=</span><span class="s">'datetimepicker5'</span> <span class="na">data-date-format=</span><span class="s">"YYYY/MM/DD"</span><span class="nt">&gt;</span>
-                    <span class="nt">&lt;input</span> <span class="na">type=</span><span class="s">'text'</span> <span class="na">class=</span><span class="s">"form-control"</span> <span class="nt">/&gt;</span>
-                    <span class="nt">&lt;span</span> <span class="na">class=</span><span class="s">"input-group-addon"</span><span class="nt">&gt;&lt;span</span> <span class="na">class=</span><span class="s">"glyphicon glyphicon-time"</span><span class="nt">&gt;&lt;/span&gt;</span>
-                    <span class="nt">&lt;/span&gt;</span>
-                <span class="nt">&lt;/div&gt;</span>
-            <span class="nt">&lt;/div&gt;</span>
-        <span class="nt">&lt;/div&gt;</span>
-        <span class="nt">&lt;script </span><span class="na">type=</span><span class="s">"text/javascript"</span><span class="nt">&gt;</span>
-            <span class="nx">$</span><span class="p">(</span><span class="kd">function</span> <span class="p">()</span> <span class="p">{</span>
-                <span class="nx">$</span><span class="p">(</span><span class="s1">'#datetimepicker5'</span><span class="p">).</span><span class="nx">datetimepicker</span><span class="p">({</span>
-                    <span class="nx">pickTime</span><span class="o">:</span> <span class="kc">false</span>
-                <span class="p">});</span>
-            <span class="p">});</span>
-        <span class="nt">&lt;/script&gt;</span>
-    <span class="nt">&lt;/div&gt;</span>
+	<span class="nt">&lt;div</span> <span class="na">class=</span><span class="s">"row"</span><span class="nt">&gt;</span>
+		<span class="nt">&lt;div</span> <span class="na">class=</span><span class="s">'col-sm-6'</span><span class="nt">&gt;</span>
+			<span class="nt">&lt;div</span> <span class="na">class=</span><span class="s">"form-group"</span><span class="nt">&gt;</span>
+				<span class="nt">&lt;div</span> <span class="na">class=</span><span class="s">'input-group date'</span> <span class="na">id=</span><span class="s">'datetimepicker5'</span><span class="nt">&gt;</span>
+					<span class="nt">&lt;input</span> <span class="na">type=</span><span class="s">'text'</span> <span class="na">class=</span><span class="s">"form-control"</span> <span class="na">data-date-format=</span><span class="s">"YYYY/MM/DD"</span><span class="nt">/&gt;</span>
+					<span class="nt">&lt;span</span> <span class="na">class=</span><span class="s">"input-group-addon"</span><span class="nt">&gt;</span>
+						<span class="nt">&lt;span</span> <span class="na">class=</span><span class="s">"glyphicon glyphicon-calendar"</span><span class="nt">&gt;&lt;/span&gt;</span>
+					<span class="nt">&lt;/span&gt;</span>
+				<span class="nt">&lt;/div&gt;</span>
+			<span class="nt">&lt;/div&gt;</span>
+		<span class="nt">&lt;/div&gt;</span>
+		<span class="nt">&lt;script </span><span class="na">type=</span><span class="s">"text/javascript"</span><span class="nt">&gt;</span>
+			<span class="nx">$</span><span class="p">(</span><span class="kd">function</span> <span class="p">()</span> <span class="p">{</span>
+				<span class="nx">$</span><span class="p">(</span><span class="s1">'#datetimepicker5'</span><span class="p">).</span><span class="nx">datetimepicker</span><span class="p">({</span>
+					<span class="nx">pickTime</span><span class="o">:</span> <span class="kc">false</span>
+				<span class="p">});</span>
+			<span class="p">});</span>
+		<span class="nt">&lt;/script&gt;</span>
+	<span class="nt">&lt;/div&gt;</span>
 <span class="nt">&lt;/div&gt;</span>
 </pre>
                 </div>
