fix for example 6

--- a/index.html
+++ b/index.html
@@ -421,13 +421,15 @@
                 <div class="container">
                     <div class="row">
                         <div class='col-sm-6'>
-                            <input type='text' class="form-control" id='datetimepicker7'/>
-                            <span class="input-group-addon datepickerbutton">
-                                <span class="glyphicon glyphicon-calendar"></span>
-                            </span>
-                            <span class="input-group-addon">
-                                <span class="glyphicon glyphicon-remove"></span>
-                            </span>
+                            <div class="input-group">
+                                <span class="input-group-addon datepickerbutton">
+                                    <span class="glyphicon glyphicon-calendar"></span>
+                                </span>
+                                <input type='text' class="form-control" id='datetimepicker7'/>
+                                <span class="input-group-addon">
+                                    <span class="glyphicon glyphicon-remove"></span>
+                                </span>
+                            </div>
                         </div>
                         <script type="text/javascript">
                             $(function () {
@@ -438,26 +440,17 @@
                 </div>
                 <br/>
                 <div class="highlight highlight-html">
-                    <pre>
-                        &lt;div class=&quot;container&quot;&gt;
-                            &lt;div class=&quot;row&quot;&gt;
-                                &lt;div class='col-sm-6'&gt;
-                                    &lt;input type='text' class=&quot;form-control&quot; id='datetimepicker7'/&gt;
-                                    &lt;span class=&quot;input-group-addon datepickerbutton&quot;&gt;
-                                        &lt;span class=&quot;glyphicon glyphicon-calendar&quot;&gt;&lt;/span&gt;
-                                    &lt;/span&gt;
-                                    &lt;span class=&quot;input-group-addon&quot;&gt;
-                                        &lt;span class=&quot;glyphicon glyphicon-remove&quot;&gt;&lt;/span&gt;
-                                    &lt;/span&gt;
-                                &lt;/div&gt;
-                                &lt;script type=&quot;text/javascript&quot;&gt;
-                                    $(function () {
-                                        $('#datetimepicker7').datetimepicker();
-                                    });
-                                &lt;/script&gt;
-                            &lt;/div&gt;
-                        &lt;/div&gt;
-                    </pre>
+<pre>
+<span class="nt">&lt;div</span> <span class="na">class=</span><span class="s">"input-group"</span><span class="nt">&gt;</span>
+    <span class="nt">&lt;span</span> <span class="na">class=</span><span class="s">"input-group-addon datepickerbutton"</span><span class="nt">&gt;</span>
+        <span class="nt">&lt;span</span> <span class="na">class=</span><span class="s">"glyphicon glyphicon-calendar"</span><span class="nt">&gt;&lt;/span&gt;</span>
+    <span class="nt">&lt;/span&gt;</span>
+    <span class="nt">&lt;input</span> <span class="na">type=</span><span class="s">'text'</span> <span class="na">class=</span><span class="s">"form-control"</span> <span class="na">id=</span><span class="s">'datetimepicker7'</span><span class="nt">/&gt;</span>
+    <span class="nt">&lt;span</span> <span class="na">class=</span><span class="s">"input-group-addon"</span><span class="nt">&gt;</span>
+        <span class="nt">&lt;span</span> <span class="na">class=</span><span class="s">"glyphicon glyphicon-remove"</span><span class="nt">&gt;&lt;/span&gt;</span>
+    <span class="nt">&lt;/span&gt;</span>
+<span class="nt">&lt;/div&gt;</span>
+</pre>
                 </div>
                 <hr />
             </div>
