fix for example 7

--- a/index.html
+++ b/index.html
@@ -416,16 +416,17 @@
                     Example 7<p>
                        Using with another input-group-addon element
                     </p>
+                    <p>Note that we put a datepickerbutton class on the input-group-addon element that we want to trigger the datetimepicker widget</p>
                 </div>
 
                 <div class="container">
                     <div class="row">
                         <div class='col-sm-6'>
-                            <div class="input-group">
+                            <div class="input-group" id="datetimepicker7">
                                 <span class="input-group-addon datepickerbutton">
                                     <span class="glyphicon glyphicon-calendar"></span>
                                 </span>
-                                <input type='text' class="form-control" id='datetimepicker7'/>
+                                <input type='text' class="form-control"/>
                                 <span class="input-group-addon">
                                     <span class="glyphicon glyphicon-remove"></span>
                                 </span>
@@ -440,12 +441,11 @@
                 </div>
                 <br/>
                 <div class="highlight highlight-html">
-<pre>
-<span class="nt">&lt;div</span> <span class="na">class=</span><span class="s">"input-group"</span><span class="nt">&gt;</span>
+<pre><span class="nt">&lt;div</span> <span class="na">class=</span><span class="s">"input-group"</span> <span class="na">id=</span><span class="s">"datetimepicker7"</span><span class="nt">&gt;</span>
     <span class="nt">&lt;span</span> <span class="na">class=</span><span class="s">"input-group-addon datepickerbutton"</span><span class="nt">&gt;</span>
         <span class="nt">&lt;span</span> <span class="na">class=</span><span class="s">"glyphicon glyphicon-calendar"</span><span class="nt">&gt;&lt;/span&gt;</span>
     <span class="nt">&lt;/span&gt;</span>
-    <span class="nt">&lt;input</span> <span class="na">type=</span><span class="s">'text'</span> <span class="na">class=</span><span class="s">"form-control"</span> <span class="na">id=</span><span class="s">'datetimepicker7'</span><span class="nt">/&gt;</span>
+    <span class="nt">&lt;input</span> <span class="na">type=</span><span class="s">'text'</span> <span class="na">class=</span><span class="s">"form-control"</span><span class="nt">/&gt;</span>
     <span class="nt">&lt;span</span> <span class="na">class=</span><span class="s">"input-group-addon"</span><span class="nt">&gt;</span>
         <span class="nt">&lt;span</span> <span class="na">class=</span><span class="s">"glyphicon glyphicon-remove"</span><span class="nt">&gt;&lt;/span&gt;</span>
     <span class="nt">&lt;/span&gt;</span>
