updated component css and js links
To always point to the latest master version of the file

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Bootstrap datetimepicker : Date/time picker widget for Twitter Bootstrap v3" />
 
     <link rel="stylesheet" type="text/css" media="screen" href="content/site.css" />
-    <link rel="stylesheet" type="text/css" media="screen" href="content/bootstrap-datetimepicker.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="https://rawgit.com/Eonasdan/bootstrap-datetimepicker/master/build/css/bootstrap-datetimepicker.min.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="content/pygments-manni.css" />
     <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.1/css/font-awesome.css" rel="stylesheet">
 
@@ -751,7 +751,7 @@
     </div>
     <script type="text/javascript" src="scripts/bootstrap.min.js"></script>
     <script type="text/javascript" src="scripts/moment.js"></script>
-    <script type="text/javascript" src="scripts/bootstrap-datetimepicker.js"></script>
+    <script type="text/javascript" src="https://rawgit.com/Eonasdan/bootstrap-datetimepicker/master/src/js/bootstrap-datetimepicker.js"></script>
     <script type="text/javascript" src="scripts/ru.js"></script>
     <script>
         $(function(){
