--- a/index.html
+++ b/index.html
@@ -751,7 +751,7 @@
     </div>
     <script type="text/javascript" src="scripts/bootstrap.min.js"></script>
     <script type="text/javascript" src="scripts/moment.js"></script>
-    <script type="text/javascript" src="https://rawgit.com/Eonasdan/bootstrap-datetimepicker/master/src/js/bootstrap-datetimepicker.js"></script>
+    <script type="text/javascript" src="//cdn.rawgit.com/Eonasdan/bootstrap-datetimepicker/master/src/js/bootstrap-datetimepicker.js"></script>
     <script type="text/javascript" src="scripts/ru.js"></script>
     <script>
         $(function(){
