--- a/Options/index.html
+++ b/Options/index.html
@@ -15,7 +15,7 @@
         <link href="../css/font-awesome-4.0.3.css" rel="stylesheet">
         <link href="../css/prettify-1.0.css" rel="stylesheet">
         <link href="../css/base.css" rel="stylesheet">
-        <link href="../../../content/bootstrap-datetimepicker.css" rel="stylesheet">
+        <link href="http://cdn.rawgit.com/Eonasdan/bootstrap-datetimepicker/master/build/css/bootstrap-datetimepicker.css" rel="stylesheet">
 
         <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
         <!--[if lt IE 9]>
@@ -25,7 +25,7 @@
 		<script type="text/javascript" src="http://code.jquery.com/jquery-2.1.1.min.js"></script>
 		<script type="text/javascript" src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
 			<script src="http://cdnjs.cloudflare.com/ajax/libs/moment.js/2.9.0/moment-with-locales.js"></script>
-			<script src="../../../scripts/bootstrap-datetimepicker.js"></script>
+			<script src="http://cdn.rawgit.com/Eonasdan/bootstrap-datetimepicker/master/src/js/bootstrap-datetimepicker.js"></script>
     </head>
 
     <body>
@@ -173,7 +173,7 @@
 <pre><code>Default: 'MMMM YYYY'
 </code></pre>
 <p>Changes the heading of the datepicker when in "days" view.</p>
-<p><img alt="Datepicker Header" src="../../../images/dpheader.png" /></p>
+<p><img alt="Datepicker Header" src="../img/dpheader.png" /></p>
 <hr />
 <h3 id="extraformats">extraFormats</h3>
 <pre><code>Default: false
@@ -255,7 +255,7 @@ Accepts: object with all or some of the parameters above
 <pre><code>Default: false
 </code></pre>
 <p>Shows the picker side by side when using the time and date together.</p>
-<p><img alt="SideBySide" src="../../../images/sidebyside.png" /></p>
+<p><img alt="SideBySide" src="../img/sidebyside.png" /></p>
 <hr />
 <h3 id="daysofweekdisabled">daysOfWeekDisabled</h3>
 <pre><code>Default: []
@@ -267,7 +267,7 @@ Accepts: array of numbers from 0-6
 <pre><code>Default: false
 </code></pre>
 <p>Shows the week of the year to the left of first day of the week.</p>
-<p><img alt="calendarWeek" src="../../../images/calendarWeeks.png" /></p>
+<p><img alt="calendarWeek" src="../img/calendarWeeks.png" /></p>
 <hr />
 <h3 id="viewmode">viewMode</h3>
 <pre><code>Default: 'days'
@@ -281,7 +281,7 @@ Accepts: 'years','months','days'
 Accepts: 'default', 'top', 'bottom'
 </code></pre>
 <p>Changes the placement of the icon toolbar.</p>
-<p><img alt="toolbarPlacement" src="../../../images/toolbarPlacement.png" /></p>
+<p><img alt="toolbarPlacement" src="../img/toolbarPlacement.png" /></p>
 <hr />
 <h3 id="showtodaybutton">showTodayButton</h3>
 <pre><code>Default: false
