--- a/Options/index.html
+++ b/Options/index.html
@@ -255,7 +255,7 @@ Accepts: object with all or some of the parameters above
 <pre><code>Default: false
 </code></pre>
 <p>Shows the picker side by side when using the time and date together.</p>
-<p><img alt="SideBySide" src="../img/sidebyside.png" /></p>
+<p><img alt="SideBySide" src="../img/sideBySide.png" /></p>
 <hr />
 <h3 id="daysofweekdisabled">daysOfWeekDisabled</h3>
 <pre><code>Default: []
