--- a/index.html
+++ b/index.html
@@ -646,7 +646,8 @@ daysOfWeekDisabled: [0,6]
     <script type="text/javascript">
         $(function () {
             $('#datetimepicker12').datetimepicker({
-                daysOfWeekDisabled: [0, 6]
+                inline: true,
+		sideBySide: true
             });
         });
     </script>
