--- a/index.html
+++ b/index.html
@@ -634,7 +634,7 @@ daysOfWeekDisabled: [0,6]
 <hr />
 <h3 id="inline">Inline</h3>
 <div class="container">
-    <div class="col-sm-6" style="height:130px;">
+    <div class="col-sm-6">
         <div class="form-group">
             <div class="row">
                 <div class="col-md-8">
@@ -655,7 +655,7 @@ daysOfWeekDisabled: [0,6]
 
 <h4 id="code_10">Code</h4>
 <pre><code>&lt;div class=&quot;container&quot;&gt;
-&lt;div class=&quot;col-sm-6&quot; style=&quot;height:130px;&quot;&gt;
+&lt;div class=&quot;col-sm-6&quot;&gt;
 &lt;div class=&quot;form-group&quot;&gt;
 &lt;div class='input-group date' id='datetimepicker12'&gt;
 &lt;input type='text' class=&quot;form-control&quot; /&gt;
