--- a/Options/index.html
+++ b/Options/index.html
@@ -447,7 +447,7 @@ Accepts: string or jQuery object
             this.clear();
         }
 </code></pre>
-<p>Will cause the date picker to stay open after selecting a date if no time components are being used.</p>
+<p>Allows for custom events to fire on keyboard press.</p>
 <hr />
 <h3 id="debug">debug</h3>
 <p><small>4.7.14</small></p>
@@ -456,37 +456,37 @@ Accepts: string or jQuery object
 <p>Will cause the date picker to stay open after a <code>blur</code> event.</p>
 <hr />
 <h3 id="disabledtimeintervals">disabledTimeIntervals</h3>
-<p><small>4.14.40</small></p>
+<p><small>4.14.30</small></p>
 <pre><code>Default: false
 </code></pre>
 <p>Disables time selection between the given <code>moments</code></p>
 <hr />
 <h3 id="allowinputtoggle">allowInputToggle</h3>
-<p><small>4.14.40</small></p>
+<p><small>4.14.30</small></p>
 <pre><code>Default: false
 </code></pre>
 <p>If <code>true</code>, the picker will show on textbox focus and icon click when used in a button group</p>
 <hr />
 <h3 id="focusonshow">focusOnShow</h3>
-<p><small>4.14.40</small></p>
+<p><small>4.14.30</small></p>
 <pre><code>Default: true
 </code></pre>
 <p>If <code>false</code>, the textbox will not be given focus when the picker is shown</p>
 <hr />
 <h3 id="enabledhours">enabledHours</h3>
-<p><small>4.14.40</small></p>
+<p><small>4.14.30</small></p>
 <pre><code>Default: false
 </code></pre>
 <p>Will allow or disallow hour selections (much like <code>disabledTimeIntervals</code>) but will affect all days</p>
 <hr />
 <h3 id="disabledhours">disabledHours</h3>
-<p><small>4.14.40</small></p>
+<p><small>4.14.30</small></p>
 <pre><code>Default: false
 </code></pre>
 <p>Will allow or disallow hour selections (much like <code>disabledTimeIntervals</code>) but will affect all days</p>
 <hr />
 <h3 id="viewdate">viewDate</h3>
-<p><small>4.14.40</small></p>
+<p><small>4.14.30</small></p>
 <pre><code>Default: false
 </code></pre>
 <p>This will change the <code>viewDate</code> without changing or setting the selected date.</p>
