--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
 <h1 id="bootstrap-3-datepicker-v4-docs">Bootstrap 3 Datepicker v4 Docs</h1>
 <div class="alert alert-info">
     <strong>Note</strong>
-    All functions are accessed via the <code>data</code> attribute e.g. <code>$('#datetimepicker6').data("DateTimePicker").FUNCTION()</code>
+    All functions are accessed via the <code>data</code> attribute e.g. <code>$('#datetimepicker').data("DateTimePicker").FUNCTION()</code>
 </div>
 
 <h3 id="minimum-setup">Minimum Setup</h3>
@@ -669,13 +669,11 @@
 
 <hr />
 <h3 id="inline">Inline</h3>
-<div class="container">
-    <div class="col-sm-6">
-        <div class="form-group">
-            <div class="row">
-                <div class="col-md-8">
-                    <div id="datetimepicker12"></div>
-                </div>
+<div style="overflow:hidden;">
+    <div class="form-group">
+        <div class="row">
+            <div class="col-md-8">
+                <div id="datetimepicker12"></div>
             </div>
         </div>
     </div>
@@ -690,13 +688,11 @@
 </div>
 
 <h4 id="code_10">Code</h4>
-<pre><code>&lt;div class=&quot;container&quot;&gt;
-    &lt;div class=&quot;col-sm-6&quot;&gt;
-        &lt;div class=&quot;form-group&quot;&gt;
-            &lt;div class=&quot;row&quot;&gt;
-                &lt;div class=&quot;col-md-8&quot;&gt;
-                    &lt;div id=&quot;datetimepicker12&quot;&gt;&lt;/div&gt;
-                &lt;/div&gt;
+<pre><code>&lt;div style=&quot;overflow:hidden;&quot;&gt;
+    &lt;div class=&quot;form-group&quot;&gt;
+        &lt;div class=&quot;row&quot;&gt;
+            &lt;div class=&quot;col-md-8&quot;&gt;
+                &lt;div id=&quot;datetimepicker12&quot;&gt;&lt;/div&gt;
             &lt;/div&gt;
         &lt;/div&gt;
     &lt;/div&gt;
