--- a/Events/index.html
+++ b/Events/index.html
@@ -152,6 +152,12 @@
 <h2 id="events">Events</h2>
 <h3 id="dphide">dp.hide</h3>
 <p>Fired when the widget is hidden.</p>
+<p>Parameters:</p>
+<pre><code>e = {
+    date //the currently set date. Type: moment object (clone)
+}
+</code></pre>
+
 <p>Emitted from:</p>
 <ul>
 <li>toggle()</li>
@@ -160,7 +166,9 @@
 </ul>
 <hr />
 <h3 id="dpshow">dp.show</h3>
-<p>Fired when the widget is shown</p>
+<p>Fired when the widget is shown.</p>
+<p>Parameters:</p>
+<p>No parameters are include, listen to <code>dp.change</code> instead</p>
 <p>Emitted from:</p>
 <ul>
 <li>toggle()</li>
@@ -168,7 +176,14 @@
 </ul>
 <hr />
 <h3 id="dpchange">dp.change</h3>
-<p>Fired when the date is changed</p>
+<p>Fired when the date is changed.</p>
+<p>Parameters:</p>
+<pre><code>e = {
+    date, //date the picker changed to. Type: moment object (clone)
+    oldDate //previous date. Type: moment object (clone) or false in the event of a null
+}
+</code></pre>
+
 <p>Emitted from:</p>
 <ul>
 <li>toggle() <strong>Note</strong>: Only fired when using <code>useCurrent</code></li>
@@ -180,7 +195,13 @@
 </ul>
 <hr />
 <h3 id="dperror">dp.error</h3>
-<p>Fired when a selected date fails to pass validation</p>
+<p>Fired when a selected date fails to pass validation.</p>
+<p>Parameters:</p>
+<pre><code>e = {
+    date //the invalid date. Type: moment object (clone)
+}
+</code></pre>
+
 <p>Emmited from:</p>
 <ul>
 <li>minDate(minDate)</li>
@@ -190,8 +211,15 @@
 </ul>
 <hr />
 <h3 id="dpupdate">dp.update</h3>
+<p><small>4.14.30</small></p>
 <p>Fired (in most cases) when the <code>viewDate</code> changes. E.g. Next and Previous buttons, selecting a year.</p>
-<p>Includes the new <code>viewDate</code> and a change type, e.g <code>YYYY</code> and <code>M</code> for year and month.</p>
+<p>Parameters:</p>
+<pre><code>e = {
+   change, //Change type as a momentjs format token. Type: string e.g. yyyy on year change
+   viewDate //new viewDate. Type: moment object
+}
+</code></pre>
+
 </div>
 			</div>
         </div>
