Update Documentation increment new options
Adding new options tooltips that follows

* Hour
* Minute
* Second

I had to look  in source code for find the options that allowed me change the the tooltips of hour box. So it's better put this on the docs

--- a/Options/index.html
+++ b/Options/index.html
@@ -540,7 +540,16 @@ Accepts: string or jQuery object
     prevDecade: 'Previous Decade',
     nextDecade: 'Next Decade',
     prevCentury: 'Previous Century',
-    nextCentury: 'Next Century'
+    nextCentury: 'Next Century',
+    incrementHour: 'Increment Hour',
+    pickHour: 'Pick Hour',
+    decrementHour:'Decrement Hour',
+    incrementMinute: 'Increment Minute',
+    pickMinute: 'Pick Minute',
+    decrementMinute:'Decrement Minute',
+    incrementSecond: 'Increment Second',
+    pickSecond: 'Pick Second',
+    decrementSecond:'Decrement Second',
 }
 </code></pre>
 
