--- a/6/namespace/css.html
+++ b/6/namespace/css.html
@@ -426,6 +426,21 @@
     <p>
       Applied to the widget when the option display.inline is enabled.
     </p>
+
+    <h2 id="lightTheme">lightTheme <a class="anchor-link" aria-label="Anchor" href="#lightTheme"><i class="fa-solid fa-anchor" aria-hidden="true"></i></a></h2>
+    <p>
+      Applied to the widget when the option display.theme is light.
+    </p>
+
+    <h2 id="darkTheme">darkTheme <a class="anchor-link" aria-label="Anchor" href="#darkTheme"><i class="fa-solid fa-anchor" aria-hidden="true"></i></a></h2>
+    <p>
+      Applied to the widget when the option display.theme is dark.
+    </p>
+
+    <h2 id="isDarkPreferedQuery">isDarkPreferedQuery <a class="anchor-link" aria-label="Anchor" href="#isDarkPreferedQuery"><i class="fa-solid fa-anchor" aria-hidden="true"></i></a></h2>
+    <p>
+      Used for detecting if the system color preference is dark mode.
+    </p>
   </section>
 
 </div>
